--- a/index.html
+++ b/index.html
@@ -259,10 +259,15 @@
     </div>
 
     <script>
-        const defaultProducts = [
-            { id: 1, name: "Jersey Brasil 2025 Stadium", price: 1899, img: "https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&w=500", desc: "Ajuste estándar, Tecnología Dri-FIT, Escudo bordado", available: true },
-            { id: 2, name: "Balón Elite Match", price: 950, img: "https://images.unsplash.com/photo-1552318970-d884f0798e4c?auto=format&fit=crop&w=500", desc: "Costuras termoselladas, Vuelo aerodinámico", available: true }
-        ];
+        // Busca esta parte en tu script y reemplázala:
+const defaultProducts = [
+    { id: 1, name: "Jersey Real Madrid Local 25/26 Champions League", price: 600, img: "https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true },
+    { id: 2, name: "Jersey Barcelona Local 25/26 Champions League", price: 600, img: "https://images.unsplash.com/photo-1552318970-d884f0798e4c?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true },
+    { id: 3, name: "Jersey Bayern Munich Local 25/26 Champions League", price: 600, img: "https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true },
+    { id: 4, name: "Jersey América Local 25/26", price: 600, img: "https://images.unsplash.com/photo-1552318970-d884f0798e4c?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true }, // Se agregó coma y llave
+    { id: 5, name: "Jersey Chivas Local 25/26", price: 600, img: "https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true }, // Se agregó coma
+    { id: 6, name: "Jersey Cruz Azul Local 25/26", price: 600, img: "https://images.unsplash.com/photo-1552318970-d884f0798e4c?auto=format&fit=crop&w=500", desc: "Jersey de alta calidad", available: true },
+];
 
         let products = JSON.parse(localStorage.getItem('area11_products')) || defaultProducts;
         let siteConfig = JSON.parse(localStorage.getItem('area11_config')) || {
